[gd_scene load_steps=10 format=4 uid="uid://djactkhe2laxv"]

[ext_resource type="PackedScene" uid="uid://dllpe8nup0y6k" path="res://scenes/levels/level_base.tscn" id="1_i0s4d"]
[ext_resource type="PackedScene" uid="uid://gkocld8f8in3" path="res://scenes/furnace.tscn" id="2_3xhlr"]
[ext_resource type="PackedScene" uid="uid://bkrbnia3b8jjy" path="res://scenes/movable_obstacle.tscn" id="2_yd8a7"]
[ext_resource type="PackedScene" uid="uid://bh1hudpvpu4jf" path="res://scenes/coal_obstacle.tscn" id="3_bwn0h"]
[ext_resource type="PackedScene" uid="uid://y4th65ssfqyb" path="res://scenes/cart.tscn" id="3_q2l7u"]
[ext_resource type="Script" path="res://scripts/death_area.gd" id="6_hvp3b"]
[ext_resource type="PackedScene" uid="uid://cubody0tud4f" path="res://scenes/candle.tscn" id="7_4brhg"]
[ext_resource type="PackedScene" uid="uid://cuhj4oiaa772s" path="res://scenes/torch.tscn" id="8_elqma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_micr3"]
size = Vector2(48, 20)

[node name="level_7" instance=ExtResource("1_i0s4d")]
level_steps = 100
level_carts = 3
level_num = 7
level_text = "Level 7: [wave frequency=50 amp=50 connected=1]FLY![/wave]"

[node name="furnace" parent="." index="0"]
position = Vector2(120, 8)
rotation = -1.5708
access_direction = Vector2(0, -1)

[node name="furnace3" parent="." index="1" instance=ExtResource("2_3xhlr")]
position = Vector2(72, 8)
rotation = -1.5708
access_direction = Vector2(0, -1)

[node name="furnace2" parent="." index="2" instance=ExtResource("2_3xhlr")]
position = Vector2(160, 80)

[node name="Player" parent="." index="3"]
position = Vector2(136, 16)

[node name="rock" parent="." index="4"]
position = Vector2(232, 112)

[node name="rock4" parent="." index="5" instance=ExtResource("3_bwn0h")]
position = Vector2(232, 128)

[node name="rock5" parent="." index="6" instance=ExtResource("3_bwn0h")]
position = Vector2(216, 96)

[node name="rock3" parent="." index="7" instance=ExtResource("3_bwn0h")]
position = Vector2(56, 112)

[node name="rock2" parent="." index="8" instance=ExtResource("3_bwn0h")]
position = Vector2(104, 48)

[node name="cart" parent="." index="9"]
position = Vector2(168, 112)

[node name="cart2" parent="." index="10" instance=ExtResource("3_q2l7u")]
position = Vector2(248, 48)

[node name="cart3" parent="." index="11" instance=ExtResource("3_q2l7u")]
position = Vector2(72, 64)
facing_left_right = false

[node name="TileMapLayer" parent="." index="12"]
tile_map_data = PackedByteArray("AAD8//z/AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAADAAAAAAD8/wEAAAADAAMAAAD8/wIAAAADAAMAAAD8/wMAAAADAAEAAAD9//z/AAABAAEAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAIAAAD9/wMAAAABAAAAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD+/wAAAAABAAIAAAD+/wMAAAABAAAAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAIAAAD//wMAAAABAAAAAAAAAPz/AAADAAAAAAAAAP3/AAADAAMAAAAAAP7/AAADAAMAAAAAAP//AAADAAEAAAAAAAAAAAAEAAAAAAAAAAEAAAAEAAMAAAAAAAIAAAAEAAMAAAAAAAMAAAAEAAEAAAABAPz/AAABAAIAAAABAP//AAABAAAAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAACAPz/AAABAAIAAAACAP//AAABAAAAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAADAPz/AAABAAIAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAMAAAABAAEAAAD8/wQAAAABAAIAAAD9/wQAAAABAAIAAAD+/wQAAAABAAIAAAD//wQAAAABAAIAAAAAAAQAAAABAAIAAAABAAQAAAABAAIAAAACAAQAAAABAAIAAAADAAQAAAABAAIAAAADAP//AAABAAAAAAADAAIAAAABAAEAAAAHAAIAAAABAAEAAAAGAAIAAAABAAEAAAAFAAIAAAABAAEAAAAEAAIAAAABAAEAAAAEAAEAAAABAAEAAAAEAAAAAAABAAEAAAAEAP//AAAEAAEAAAAEAP7/AAAEAAMAAAAEAP3/AAAEAAMAAAAFAP3/AAABAAEAAAAGAP3/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAGAAEAAAABAAEAAAAFAAEAAAABAAEAAAAFAAAAAAABAAEAAAAFAP//AAABAAEAAAAFAP7/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAGAAAAAAABAAEAAAAEAPz/AAAEAAAAAAAFAPz/AAABAAEAAAAGAPz/AAABAAEAAAAHAPz/AAABAAEAAAAHAAMAAAABAAEAAAAGAAMAAAABAAEAAAAFAAMAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAIAAAAFAAQAAAABAAIAAAAGAAQAAAABAAIAAAAHAAQAAAABAAIAAAD6/wMAAAAAAAEAAAD6/wIAAAAAAAEAAAD6/wEAAAAAAAEAAAD6/wAAAAAAAAEAAAD6////AAAAAAEAAAD6//7/AAAAAAEAAAD6//3/AAAAAAEAAAD6//z/AAAAAAEAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAEAAAD7/wAAAAABAAEAAAD7/wEAAAABAAEAAAD7/wIAAAABAAEAAAD7/wMAAAABAAEAAAD6/wQAAAAAAAIAAAD7/wQAAAABAAIAAAAHAAUAAAABAAMAAAAGAAUAAAABAAMAAAAFAAUAAAABAAMAAAAEAAUAAAABAAMAAAADAAUAAAABAAMAAAACAAUAAAABAAMAAAABAAUAAAABAAMAAAAAAAUAAAABAAMAAAD//wUAAAABAAMAAAD+/wUAAAABAAMAAAD9/wUAAAABAAMAAAD8/wUAAAABAAMAAAD7/wUAAAABAAMAAAD6/wUAAAAAAAMAAAAIAPz/AAACAAEAAAAIAP3/AAACAAEAAAAIAP7/AAACAAEAAAAIAP//AAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAIAAAAIAAUAAAACAAMAAAAIAPv/AAACAAAAAAAHAPv/AAABAAAAAAAGAPv/AAABAAAAAAAFAPv/AAABAAAAAAAEAPv/AAABAAAAAAADAPv/AAABAAAAAAACAPv/AAABAAAAAAABAPv/AAABAAAAAAAAAPv/AAABAAAAAAD///v/AAABAAAAAAD+//v/AAABAAAAAAD9//v/AAABAAAAAAD8//v/AAABAAAAAAD7//v/AAABAAAAAAD6//v/AAAAAAAAAAA=")

[node name="ui" parent="." index="13"]
level_num = 7

[node name="MovableObstacle2" parent="." index="18" instance=ExtResource("2_yd8a7")]
position = Vector2(232, 144)

[node name="MovableObstacle5" parent="." index="19" instance=ExtResource("2_yd8a7")]
position = Vector2(136, 144)

[node name="MovableObstacle3" parent="." index="20" instance=ExtResource("2_yd8a7")]
position = Vector2(216, 48)

[node name="MovableObstacle4" parent="." index="21" instance=ExtResource("2_yd8a7")]
position = Vector2(136, 48)

[node name="death_area" type="Area2D" parent="." index="22"]
position = Vector2(176, 48)
script = ExtResource("6_hvp3b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_area" index="0"]
shape = SubResource("RectangleShape2D_micr3")

[node name="candle" parent="death_area" index="1" instance=ExtResource("7_4brhg")]
position = Vector2(8, -32)
candle_amount = 4

[node name="death_area2" type="Area2D" parent="." index="23"]
position = Vector2(112, 112)
script = ExtResource("6_hvp3b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_area2" index="0"]
shape = SubResource("RectangleShape2D_micr3")

[node name="candle" parent="." index="24" instance=ExtResource("7_4brhg")]
position = Vector2(120, 144)

[node name="candle2" parent="." index="25" instance=ExtResource("7_4brhg")]
position = Vector2(104, 144)
candle_amount = 2

[node name="candle3" parent="." index="26" instance=ExtResource("7_4brhg")]
position = Vector2(88, 144)
candle_amount = 3

[node name="candle4" parent="." index="27" instance=ExtResource("7_4brhg")]
position = Vector2(72, 144)
candle_amount = 4

[node name="torch" parent="." index="28" instance=ExtResource("8_elqma")]
position = Vector2(72, 80)

[node name="torch2" parent="." index="29" instance=ExtResource("8_elqma")]
position = Vector2(136, 80)

[node name="torch3" parent="." index="30" instance=ExtResource("8_elqma")]
position = Vector2(216, 80)

[node name="candle5" parent="." index="31" instance=ExtResource("7_4brhg")]
position = Vector2(168, 16)
candle_amount = 3

[node name="candle6" parent="." index="32" instance=ExtResource("7_4brhg")]
position = Vector2(248, 144)
candle_amount = 3

[node name="restart_delay" type="Timer" parent="." index="33"]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="death_area" to="death_area" method="_on_area_entered"]
[connection signal="area_entered" from="death_area2" to="death_area2" method="_on_area_entered"]
[connection signal="timeout" from="restart_delay" to="death_area" method="_on_restart_delay_timeout"]
